# 3d-scene-reconstruction-lab

./: .gitignore  README.md  pyproject.toml
configs/camera_geometry/: example.yaml
configs/two_view/: real_pair.yaml  synthetic_epipolar.yaml
experiments/exp002_two_view_reconstruction/: README.md  command.sh  metrics.json
reports/milestone-reports/: M1-camera-geometry.md  M2A-epipolar-geometry.md  M2B-two-view-reconstruction.md
scripts/: demo_camera_geometry.py  demo_epipolar_geometry.py  run_two_view_reconstruction.py
src/reconstruction/cameras/: __init__.py  pinhole.py
src/reconstruction/evaluation/: __init__.py  reprojection.py
src/reconstruction/features/: __init__.py  matching.py
src/reconstruction/geometry/: __init__.py  epipolar.py  pose.py  robust.py  transforms.py  triangulation.py
src/reconstruction/visualization/: __init__.py  two_view.py
tests/: test_epipolar.py  test_matching.py  test_pinhole.py  test_pose.py  test_reprojection.py  test_robust_fundamental.py  test_transforms.py  test_triangulation.py  test_two_view_integration.py
