[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reconstruction"
version = "0.1.0"
description = "3D scene reconstruction study repository"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "PyYAML",
    "opencv-python-headless>=4.8",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
